**v0.3.0**
1. Added search for type in columns with foreign keys from models 


**v0.2.2**
1. Added if_not_exists to table properties

**v0.2.1**
1. Added support for parsing 'dataset' from data as 'table_schema' also added fields like 'project' (to support BigQuery metadata)
2. Depencencies updated
3. Added HQL Table Properties

**v0.1.5**
1. field 'attrs' added to Type to store values from py-models-parser output

**v0.1.3**
1. 'parents' added to Type and to Table

**v0.1.1**
1. Fix dependencies for python 3.6

**v0.1.0**

1. Table Meta moved from O!MyModels to separate library. To make it re-usebale in fakeme library.