@@ -23,6 +23,7 @@ pydantic = "^1.8.2"
 pytest = "^5.2"
 twine = "^3.4.2"
 flake8 = "^4.0.1"
+pre-commit = "^2.16.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
