@@ -1,5 +1,6 @@
 **v0.3.0**
 1. Added search for type in columns with foreign keys from models 
+2. Fixed issue with popylating Column details like unique or primary key from py-models-parser 
 
 
 **v0.2.2**
